# kindle_formats-rs

./: Cargo.toml  README.md  README.org
src/: krds.rs  lib.rs
